--- a/src/components/PageForm/styles.css
+++ b/src/components/PageForm/styles.css
@@ -2,6 +2,31 @@
     display: none;
 }
 
+.input-block {
+    position: relative;
+}
+
+.input-block + .input-block {
+    margin-top: 1.4rem;
+}
+
+.input-block label {
+    font-size: 1.4rem;
+    color: var(--color-text-label);
+}
+
+.input-block input {
+    width: 100%;
+    height: 4rem;
+    margin-top: 0.8rem;
+    border-radius: 0.8rem;
+    background: var(--background);
+    border: 1px solid var(--color-border);
+    outline: 0;
+    padding: 0 1.6rem;
+    font: 1.6rem Raleway;
+}
+
 @media (min-width: 1100px) {
     .form-content {
         display: block;
