--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -12,7 +12,7 @@ main {
     max-width: 1100px;
 }
 
-.float-add-to-list a {
+.float-add-to-list button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -29,6 +29,38 @@ main {
     position: fixed;
     right: 35px;
     bottom: 15px;
+    outline: none;
+    cursor: pointer;
+}
+
+#new-debt {
+    text-decoration: none;
+    font: 600 1.6rem Raleway;
+    border-radius: 0.7rem;
+    padding: 1rem 2.7rem;
+    outline: none;
+    border: none;
+    background: var(--color-primary-dark);
+    color: var(--color-text-secondary);
+    transition: background .5s;
+    cursor:pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 6.6rem;
+}
+
+#new-debt::before {
+    content: '+';
+    font-size: xx-large;
+    width: 1.5rem;
+    height: auto;
+    margin-right: 1.2rem;
+}
+
+#new-debt:hover {
+    background: var(--color-secondary);
 }
 
 @media (min-width: 1100px) {
