--- a/src/components/PageList/styles.css
+++ b/src/components/PageList/styles.css
@@ -11,6 +11,10 @@
     flex-direction: row;
     width: 100%;
     height: 7rem;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    text-align: left;
 }
 
 .item + .item {
